# rustyplayer

./: Cargo.toml  Cross.toml  Dockerfile  README.md  build-docker.sh  build-rpi-release.sh  build-rpi.sh  controller.service  copy-media-to-rpi copy.sh  copy-repo-to-rpi.sh  copy-resource-to-rpi.sh  copy-to-rpi-release.sh  copy-to-rpi.sh  goto-docker.sh  rustyplayer.service
experiment_results/: test_results_1.csv
resource/: media.json  schedules.json
src/: consts.rs  handlers.rs  main.rs  models.rs  player.rs  routes.rs  scheduler.rs  utils.rs
src/html/: index.html
static/: index.html
