[package]
name = "rustyplayer"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3.1"
local-ip-address = "0.5.1"
rodio = "0.16.0"
glob = "0.3.0"
tokio-cron-scheduler = "*"
chrono = "0.4.19"
