[package]
name = "rustyplayer"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.24.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3.3"
local-ip-address = "0.5.1"
rodio = "0.16.0"
glob = "0.3.0"
tokio-cron-scheduler = "0.9.1"
chrono = "0.4.19"
futures = "0.3.25"
bytes = "1.3.0"
