[package]
name = "rustyplayer"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3.5"
local-ip-address = "0.5.3"
rodio = "0.17.1"
glob = "0.3.1"
tokio-cron-scheduler = "0.9.4"
chrono = "0.4.26"
futures = "0.3.28"
bytes = "1.4.0"
uuid = "1.3.4"
